[gd_scene load_steps=4 format=3 uid="uid://dnewd00n25h0h"]

[ext_resource type="Script" path="res://Scripts/cool_dog.gd" id="1_cegg5"]
[ext_resource type="Texture2D" uid="uid://coeco4xpad0ov" path="res://addons/sprites/characters/smoking_dog_left.png" id="2_d8sei"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykffc"]
radius = 5.99996
height = 21.9999

[node name="cool_dog" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
scale = Vector2(0.8, 0.8)
collision_mask = 3
script = ExtResource("1_cegg5")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(-3, 8.00001)
scale = Vector2(0.0702875, 0.0702875)
texture = ExtResource("2_d8sei")

[node name="Area2D" type="Area2D" parent="."]
z_index = 2
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 20)
rotation = 1.56731
shape = SubResource("CapsuleShape2D_ykffc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(1, 20)
rotation = 1.56731
scale = Vector2(0.933808, 0.933808)
shape = SubResource("CapsuleShape2D_ykffc")

[node name="Bone_Marker" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-18, 15)

[node name="ShootingTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
